--- a/verzameling.html
+++ b/verzameling.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-r9o1F5AtqA" id="gallery2-v">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-r9o1F5AtqA" id="gallery2-v">
 
     
 
