--- a/atelier2017.html
+++ b/atelier2017.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-r9oixOcnQF" id="image4-18">
+<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="cid-r9oixOcnQF" id="image4-18">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
