--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section form1 cid-r9o5z4FXpx" id="form1-15">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section form1 cid-r9o5z4FXpx" id="form1-15">
 
     
 
@@ -74,7 +74,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Bedankt om het formulier in te vullen!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="orcP3wGAQfO7Leg8M1/G8IyvDsjSq63ayNunp8KumZZt0T+cu/shlK7DhuyG5TvQ26EYbUkgiD/c1/7sAhYWFRWzEvJAnIqWlxvolG7svUIq5a73o7W1LSmCOVya/NFK">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Q6jRzoQ41TyB3gNvJMSdZ569G0QpTGjBaJT+PsM3zRlSvndDjj22ANloWnFZsPChcHKzQnopzF3yy1452PwW3loTLGbRGo6HTNMpdMwrGpgbkPTD9ldtNGFA+N9Jk9uH">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
