--- a/detail.html
+++ b/detail.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-r9o2yhe0Jn" id="gallery2-w">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-r9o2yhe0Jn" id="gallery2-w">
 
     
 
